

SUBDIRS=src

include_HEADERS= \
		 include/neuro/debug.h \
		 include/neuro/NEURO.h \
		 include/neuro/neuro_engine.h \
		 include/neuro/ebuf.h \
		 include/neuro/events.h \
		 include/neuro/extlib.h \
		 include/neuro/graphics.h \
		 include/neuro/neuro_main.h \
		 include/neuro/nmap.h \
		 include/neuro/other.h \
		 include/neuro/typedef.h \
		 include/neuro/xmltool.h
