
SUBDIRS = nnet

noinst_HEADERS = \
		 config.h.in \
		 global.h

srcdir = @srcdir@
VPATH = @srcdir@


include_HEADERS = \
		  config.h \
		  NEURO.h \
		  debug.h \
		  ebuf.h \
		  events.h \
		  keymap.h \
		  extlib.h \
		  graphics.h \
		  neuro_main.h \
		  other.h \
		  typedef.h \
		  bitmap.h \
		  neuro_engine.h \
		  lbuf.h \
		  parseConf.h
