name:		neuronet
version:	2.1.0
license:	LGPL-2.1
license-file:	COPYING
author:		Nicholas Niro
maintainer:	nicholasniro@neuroponic.com
category:	Network
synopsis:	Simple yet powerful network library.
description:
	A networking library, made to be solid and efficient
	while still promoting a simple and easy interface.
build-type:	Simple
ghc-options:	-Wall
exposed-modules:
	Network.Neuronet
	Network.Neuronet.Core
	Network.Neuronet.Flags
	Network.Neuronet.Packet
	Network.Neuronet.State
	Network.Neuronet.Slave
	Network.Neuronet.Master
	Network.Neuronet.Epoll
build-depends:	base, mtl, bytestring
include-dirs:	. .. ../../../include ../../../include/neuro ../../../include/neuro/nnet
extra-libraries:
	neuro
	neuronet
