#!/bin/bash

SUBDIRS =

noinst_PROGRAMS = test-cl_sr test-client test-client2

test_cl_sr_LDADD = ../src/libneuronet.la
test_cl_sr_SOURCES = test-cl_sr.c

test_client_LDADD = ../src/libneuronet.la
test_client_SOURCES = test-client.c

test_client2_LDADD = ../src/libneuronet.la
test_client2_SOURCES = test-client2.c
